normalize `.pure-table tfoot` with `text-align: left`, fixes #591

--- a/src/tables/css/tables.css
+++ b/src/tables/css/tables.css
@@ -23,6 +23,7 @@
     padding: 0.5em 1em; /* cell padding */
 }
 
+.pure-table tfoot,
 .pure-table thead {
     background-color: #e0e0e0;
     color: #000;
